--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^6.14.1",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^2.1.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.1",
     "typescript": "^3.7.4",
     "uuid": "^3.3.3"
   },
