--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/yup": "^0.29.11",
     "bootstrap": "^4.4.1",
+    "emailjs-com": "^2.6.4",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
