--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/yup": "^0.29.11",
+    "antd": "^4.16.0",
     "bootstrap": "^4.4.1",
     "emailjs-com": "^2.6.4",
     "node-sass": "^4.14.1",
-    "react": "^17.0.0",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^17.0.0",
+    "react-dom": "^16.14.0",
     "react-hook-form": "^7.1.1",
+    "react-is": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^2.1.0",
     "react-scripts": "^4.0.1",
+    "styled-components": "^5.3.0",
     "typescript": "^3.7.4",
     "uuid": "^3.3.3",
     "yup": "^0.32.9"
@@ -55,6 +58,7 @@
   },
   "devDependencies": {
     "@types/react-router-bootstrap": "^0.24.5",
+    "@types/styled-components": "^5.1.9",
     "@types/uuid": "^3.4.6"
   }
 }
