--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-transition-group": "^4.4.1",
     "@types/yup": "^0.29.11",
     "bootstrap": "^4.4.1",
     "emailjs-com": "^2.6.4",
@@ -28,7 +29,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^2.1.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^4.0.3",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.0",
     "typescript": "^3.7.4",
     "uuid": "^3.3.3",
