--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ltphy.github.io/my-porfolio",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -40,7 +41,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -60,6 +63,7 @@
   "devDependencies": {
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/styled-components": "^5.1.9",
-    "@types/uuid": "^3.4.6"
+    "@types/uuid": "^3.4.6",
+    "gh-pages": "^3.2.0"
   }
 }
