feature/host update url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ltphy.github.io/my-porfolio",
+  "homepage": "http://ltphy.github.io/my-portfolio",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
