--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.4.1",
     "@types/yup": "^0.29.11",
+    "axios": "^0.27.2",
     "bootstrap": "^4.4.1",
     "emailjs-com": "^2.6.4",
     "node-sass": "^4.14.1",
