--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.14.0",
     "react-hook-form": "^7.1.1",
+    "react-image-gallery": "^1.2.8",
     "react-is": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
@@ -62,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.0.5",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/styled-components": "^5.1.9",
     "@types/uuid": "^3.4.6",
